rover_cerebro/log/build_2023-07-18_19-51-38/rover_gui/stderr.log
  File "/home/lolineko/ROS2/rover_cerebro/install/rover_gui/lib/python3.8/site-packages/rover_gui/RoverGUI.py", line 17
    import nodos_gui/listener_gui
                    ^
SyntaxError: invalid syntax

